<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="394dp"
        android:layout_height="167dp"
        android:src="@drawable/ter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_vDep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/vDep"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_vd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/villeDep"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_vDep"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tv_vArr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vArriv"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_vd" />

    <EditText
        android:id="@+id/et_vA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="text"
        android:hint="@string/villeArriv"
        app:layout_constraintTop_toBottomOf="@+id/tv_vArr"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btt_submition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btt_valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_vA"
        />

</androidx.constraintlayout.widget.ConstraintLayout>